--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@smc/happn",
-  "description": "Pub/sub api as a service using faye and mongo & redis or nedb, can work as cluster, single process or embedded using nedb, use in production at your own risk",
-  "version": "0.1.13",
+  "description": "Pub/sub api as a service using primus and mongo & redis or nedb, can work as cluster, single process or embedded using nedb, use in production at your own risk",
+  "version": "0.1.14",
   "main": "./lib/index",
   "keywords": [
     "faye",
