--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "ws": "^0.7.1"
   },
   "devDependencies": {
+    "chai": "^3.2.0",
+    "expect.js": "*",
     "mocha": "*",
-    "expect.js": "*"
+    "objective": "0.0.28"
   },
   "readmeFilename": "README.md"
 }
