--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "JSONStream": "^0.10.0",
     "async": "^0.9.0",
+    "binary-pack": "^1.0.1",
     "body-parser": "^1.12.2",
     "byline": "^4.2.1",
     "connect": "^3.3.5",
@@ -19,7 +20,7 @@
     "log4js": "^0.6.22",
     "moment": "^2.9.0",
     "nedb": "^1.1.1",
-    "primus": "^3.0.2",
+    "primus": "^3.2.1",
     "request": "^2.53.0",
     "serve-static": "^1.9.2",
     "shortid": "^2.2.1",
