--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.12.2",
     "byline": "^4.2.1",
     "connect": "^3.3.5",
+    "debug": "^2.2.0",
     "jwt-simple": "^0.2.0",
     "log4js": "^0.6.22",
     "moment": "^2.9.0",
