--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "expect.js": "*",
-    "mocha": "*",
-    "objective": "0.0.28"
+    "mocha": "*"
   },
   "readmeFilename": "README.md"
 }
