--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "expect.js": "*",
-    "mocha": "*"
+    "mocha": "*",
+    "should": "^7.1.0"
   },
   "readmeFilename": "README.md"
 }
