--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "JSONStream": "^0.10.0",
     "async": "^0.9.0",
+    "bluebird": "^2.10.0",
     "body-parser": "^1.12.2",
     "byline": "^4.2.1",
     "connect": "^3.3.5",
