--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "expect.js": "*",
-    "mocha": "*",
-    "should": "^7.1.0"
+    "mocha": "*"
   },
   "readmeFilename": "README.md"
 }
