--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "expect.js": "*",
-    "mocha": "*"
+    "mocha": "*",
+    "objective": "0.0.32"
   },
   "readmeFilename": "README.md"
 }
