--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  
   "name": "happn",
   "description": "Pub/sub api as a service using primus and mongo & redis or nedb, can work as cluster, single process or embedded using nedb, use in production at your own risk",
   "version": "0.1.31",
@@ -12,6 +13,10 @@
     "redis",
     "nedb"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/happner/happn.git"
+  },
   "dependencies": {
     "JSONStream": "^0.10.0",
     "async": "^0.9.0",
