--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  
   "name": "happn",
   "description": "Pub/sub api as a service using primus and mongo & redis or nedb, can work as cluster, single process or embedded using nedb, use in production at your own risk",
   "version": "0.1.38",
@@ -20,6 +19,8 @@
   "dependencies": {
     "JSONStream": "^0.10.0",
     "async": "^0.9.0",
+    "bitcore": "^0.13.5",
+    "bitcore-ecies": "^0.12.0",
     "bluebird": "^2.10.0",
     "body-parser": "^1.12.2",
     "byline": "^4.2.1",
