--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "happn",
   "description": "Pub/sub api as a service using primus and mongo & redis or nedb, can work as cluster, single process or embedded using nedb, use in production at your own risk",
-  "version": "0.0.49-prerelease",
+  "version": "1.0.0",
   "main": "./lib/index",
   "scripts": {
     "test": "mocha test"
@@ -17,29 +17,28 @@
     "url": "https://github.com/happner/happn.git"
   },
   "dependencies": {
-    "JSONStream": "^0.10.0",
-    "async": "^0.9.0",
-    "bitcore": "^0.13.5",
-    "bitcore-ecies": "^0.12.0",
-    "bluebird": "^2.10.0",
-    "body-parser": "^1.12.2",
-    "byline": "^4.2.1",
-    "connect": "^3.3.5",
-    "debug": "^2.2.0",
-    "jwt-simple": "^0.2.0",
-    "log4js": "^0.6.22",
-    "lru-cache": "^2.7.0",
-    "moment": "^2.9.0",
-    "nedb": "^1.1.1",
-    "password-hash-and-salt": "^0.1.2",
-    "primus": "^3.0.2",
-    "request": "^2.53.0",
-    "serve-static": "^1.9.2",
-    "shortid": "^2.2.1",
-    "traverse": "^0.6.6",
-    "underscore": "^1.8.2",
-    "underscore.string": "^3.0.3",
-    "ws": "^0.7.1"
+    "JSONStream": "0.10.0",
+    "async": "0.9.2",
+    "bitcore": "0.13.5",
+    "bitcore-ecies": "0.12.0",
+    "bluebird": "2.10.2",
+    "body-parser": "1.14.1",
+    "byline": "4.2.1",
+    "connect": "3.4.0",
+    "jwt-simple": "0.2.0",
+    "log4js": "0.6.28",
+    "lru-cache": "2.7.1",
+    "moment": "2.10.6",
+    "nedb": "1.4.0",
+    "password-hash-and-salt": "0.1.3",
+    "primus": "3.2.3",
+    "request": "2.67.0",
+    "serve-static": "1.10.0",
+    "shortid": "2.2.4",
+    "traverse": "0.6.6",
+    "underscore": "1.8.3",
+    "underscore.string": "3.2.2",
+    "ws": "0.7.2"
   },
   "devDependencies": {
     "chai": "^3.2.0",
