--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "happn",
   "description": "pub/sub api as a service using primus and mongo & redis or nedb, can work as cluster, single process or embedded using nedb, use in production at your own risk",
-  "version": "1.0.2",
+  "version": "1.1.2",
   "main": "./lib/index",
   "scripts": {
     "test": "mocha test"
@@ -19,8 +19,8 @@
   "dependencies": {
     "JSONStream": "0.10.0",
     "async": "0.9.2",
-    "bitcore": "0.13.5",
-    "bitcore-ecies": "0.12.0",
+    "bitcore-ecies": "1.0.1",
+    "bitcore-lib": "0.13.10",
     "bluebird": "2.10.2",
     "body-parser": "1.14.1",
     "byline": "4.2.1",
@@ -36,6 +36,7 @@
     "request": "2.67.0",
     "serve-static": "1.10.0",
     "shortid": "2.2.4",
+    "sillyname": "^0.1.0",
     "traverse": "0.6.6",
     "underscore": "1.8.3",
     "underscore.string": "3.2.2",
