--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "happn",
+  "name": "@smc/happn",
   "description": "pub/sub api as a service using primus and mongo & redis or nedb, can work as cluster, single process or embedded using nedb, use in production at your own risk",
   "version": "1.1.4",
   "main": "./lib/index",
