--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "jwt-simple": "0.2.0",
     "lru-cache": "2.7.1",
     "moment": "2.10.6",
-    "nedb": "1.4.0",
+    "nedb": "1.5.0",
     "password-hash-and-salt": "0.1.3",
     "primus": "3.2.3",
     "request": "2.67.0",
@@ -40,6 +40,7 @@
     "sillyname": "^0.1.0",
     "traverse": "0.6.6",
     "underscore": "1.8.3",
+    "underscore.deep": "0.5.1",
     "underscore.string": "3.2.2",
     "ws": "0.7.2"
   },
