--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "clone": "1.0.2",
     "connect": "3.4.0",
     "happn-logger": "0.0.1",
+    "happn-nedb": "^1.5.0",
     "jwt-simple": "0.2.0",
     "lru-cache": "2.7.1",
     "moment": "2.10.6",
-    "nedb": "1.5.0",
     "password-hash-and-salt": "0.1.3",
     "primus": "3.2.3",
     "request": "2.67.0",
