--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lru-cache": "2.7.1",
     "moment": "2.10.6",
     "password-hash-and-salt": "0.1.3",
+    "pem": "^1.8.1",
     "primus": "3.2.3",
     "request": "2.67.0",
     "serve-static": "1.10.0",
@@ -42,6 +43,7 @@
     "underscore": "1.8.3",
     "underscore.deep": "0.5.1",
     "underscore.string": "3.2.2",
+    "user-home": "^2.0.0",
     "ws": "0.7.2"
   },
   "devDependencies": {
