--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ node_js:
   - "0.10"
 env:
 - NODE_TLS_REJECT_UNAUTHORIZED=0
+script: "npm run-script test-cover"
+after_script: "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
