--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "2.2.0",
   "main": "./lib/index",
   "scripts": {
-    "test": "mocha test"
+    "test": "mocha silence.js test",
+    "test-cover": "istanbul cover _mocha -- silence.js test"
   },
   "keywords": [
     "mongo",
@@ -48,7 +49,9 @@
   },
   "devDependencies": {
     "chai": "^3.2.0",
+    "coveralls": "^2.11.6",
     "expect.js": "*",
+    "istanbul": "^0.4.1",
     "mocha": "*",
     "objective": "0.0.40"
   },
