--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "dependencies": {
     "JSONStream": "0.10.0",
     "async": "0.9.2",
-    "bitcore-ecies": "1.0.1",
-    "bitcore-lib": "0.13.10",
+    "bitcore-ecies": "^1.0.1",
+    "bitcore-lib": "^0.13.10",
     "bluebird": "2.10.2",
     "body-parser": "1.14.1",
     "byline": "4.2.1",
