--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "happn",
   "description": "pub/sub api as a service using primus and mongo & redis or nedb, can work as cluster, single process or embedded using nedb, use in production at your own risk",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "main": "./lib/index",
   "scripts": {
     "test": "mocha silence.js test",
@@ -30,7 +30,7 @@
     "connect": "3.4.0",
     "happn-logger": "0.0.1",
     "happn-nedb": "^1.5.0",
-    "jwt-simple": "0.2.0",
+    "jwt-simple": "^0.2.0",
     "lru-cache": "2.7.1",
     "moment": "2.10.6",
     "password-hash-and-salt": "0.1.3",
