--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "expect.js": "*",
     "istanbul": "^0.4.1",
     "mocha": "*",
-    "objective": "0.0.40"
+    "objective": "0.0.40",
+    "request": "^2.67.0"
   },
   "readmeFilename": "README.md"
 }
