--- a/package.json
+++ b/package.json
@@ -21,14 +21,13 @@
   "dependencies": {
     "JSONStream": "0.10.0",
     "async": "0.9.2",
-    "bitcore-ecies": "^1.0.1",
-    "bitcore-lib": "^0.13.10",
     "bluebird": "2.10.2",
     "body-parser": "1.14.1",
     "byline": "4.2.1",
     "clone": "1.0.2",
     "connect": "3.4.0",
     "connect-cookies": "0.0.0",
+    "consent-util-crypto": "^1.1.1",
     "happn-logger": "0.0.1",
     "happn-nedb": "^1.5.0",
     "jwt-simple": "^0.2.0",
