--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "happn",
   "description": "pub/sub api as a service using primus and mongo & redis or nedb, can work as cluster, single process or embedded using nedb, use in production at your own risk",
-  "version": "2.4.4",
+  "version": "2.4.5",
   "main": "./lib/index",
   "scripts": {
     "test": "mocha silence.js test",
@@ -34,6 +34,7 @@
     "jwt-simple": "^0.2.0",
     "lru-cache": "2.7.1",
     "moment": "2.10.6",
+    "node-uuid": "^1.4.7",
     "password-hash-and-salt": "0.1.3",
     "pem": "^1.8.1",
     "primus": "3.2.3",
