--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "happn",
   "description": "pub/sub api as a service using primus and mongo & redis or nedb, can work as cluster, single process or embedded using nedb, use in production at your own risk",
-  "version": "2.5.11",
+  "version": "2.5.13",
   "main": "./lib/index",
   "scripts": {
     "test": "mocha silence.js test",
     "test-cover": "istanbul cover _mocha -- silence.js test"
   },
+  "author": "",
+  "license": "MIT",
   "keywords": [
     "mongo",
     "redis",
