--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "happn",
   "description": "pub/sub api as a service using primus and mongo & redis or nedb, can work as cluster, single process or embedded using nedb, use in production at your own risk",
-  "version": "2.5.15",
+  "version": "2.5.16",
   "main": "./lib/index",
   "scripts": {
     "test": "mocha silence.js test",
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "JSONStream": "0.10.0",
-    "async": "0.9.2",
+    "async": "^1.5.2",
     "bluebird": "2.10.2",
     "body-parser": "1.14.1",
     "byline": "4.2.1",
@@ -54,7 +54,7 @@
     "chai": "^3.2.0",
     "coveralls": "^2.11.6",
     "expect.js": "*",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "istanbul": "^0.4.1",
     "karma": "^0.13.15",
     "karma-chai": "^0.1.0",
