issue/23 - Fix memory leak that is triggered by way happner uses remote client.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./lib/index",
   "scripts": {
     "test": "mocha silence.js test",
-    "test-cover": "istanbul cover _mocha -- silence.js test"
+    "test-cover": "istanbul cover _mocha -- silence.js test",
+    "test-memory": "mocha --expose-gc test/test-memory"
   },
   "author": "",
   "license": "MIT",
