--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "JSONStream": "0.10.0",
     "async": "0.9.2",
+    "benchmarket": "0.0.4",
     "bluebird": "2.10.2",
     "body-parser": "1.14.1",
     "byline": "4.2.1",
