--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "bluebird": "2.10.2",
     "body-parser": "1.14.1",
     "byline": "4.2.1",
-    "clone": "1.0.2",
+    "clone": "^1.0.2",
     "connect": "3.4.0",
     "connect-cookies": "0.0.0",
     "deep-copy": "^1.1.0",
@@ -35,6 +35,7 @@
     "happn-nedb": "^1.5.0",
     "happn-util-crypto": "0.0.6",
     "jwt-simple": "^0.2.0",
+    "lodash": "^4.11.1",
     "lru-cache": "4.0.0",
     "moment": "2.10.6",
     "node-uuid": "^1.4.7",
@@ -44,6 +45,7 @@
     "serve-static": "1.10.0",
     "shortid": "2.2.4",
     "sillyname": "^0.1.0",
+    "structured-clone": "^0.2.2",
     "traverse": "0.6.6",
     "underscore": "1.8.3",
     "underscore.deep": "0.5.1",
