--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "shortid": "2.2.4",
     "sillyname": "^0.1.0",
     "traverse": "0.6.6",
+    "underscore.string": "^3.3.4",
     "user-home": "^2.0.0",
     "ws": "1.0.1"
   },
