--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "2.5.20",
   "main": "./lib/index",
   "scripts": {
-    "test": "mocha silence.js test",
+    "test": "mocha --expose-gc silence.js test",
     "test-cover": "istanbul cover _mocha -- silence.js test",
     "test-memory": "mocha --expose-gc test/test-memory"
   },
@@ -49,7 +49,7 @@
     "ws": "1.0.1"
   },
   "devDependencies": {
-    "benchmarket": "0.0.4",
+    "benchmarket": "0.0.9",
     "chai": "^3.5.0",
     "coveralls": "^2.11.6",
     "expect.js": "*",
