--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "happn",
   "description": "pub/sub api as a service using primus and mongo & redis or nedb, can work as cluster, single process or embedded using nedb, use in production at your own risk",
-  "version": "2.6.1",
+  "version": "2.6.2",
   "main": "./lib/index",
   "scripts": {
     "test": "mocha --expose-gc silence.js test",
@@ -23,29 +23,29 @@
   },
   "dependencies": {
     "JSONStream": "0.10.0",
-    "async": "^1.5.2",
+    "async": "1.5.2",
     "bluebird": "2.10.2",
     "body-parser": "1.14.1",
     "byline": "4.2.1",
     "connect": "3.4.0",
     "connect-cookies": "0.0.0",
-    "deep-copy": "^1.1.0",
+    "deep-copy": "1.1.2",
     "happn-logger": "0.0.2",
-    "happn-nedb": "^1.5.0",
+    "happn-nedb": "1.8.1",
     "happn-util-crypto": "0.0.6",
-    "jwt-simple": "^0.2.0",
+    "jwt-simple": "0.2.0",
     "lru-cache": "4.0.0",
     "moment": "2.10.6",
-    "node-uuid": "^1.4.7",
+    "node-uuid": "1.4.7",
     "password-hash-and-salt": "0.1.3",
-    "pem": "^1.8.1",
+    "pem": "1.8.3",
     "primus": "4.0.5",
     "serve-static": "1.10.0",
     "shortid": "2.2.4",
-    "sillyname": "^0.1.0",
+    "sillyname": "0.1.0",
     "traverse": "0.6.6",
-    "underscore.string": "^3.3.4",
-    "user-home": "^2.0.0",
+    "underscore.string": "3.3.4",
+    "user-home": "2.0.0",
     "ws": "1.0.1"
   },
   "devDependencies": {
