--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "happn-util-crypto": "0.0.6",
     "jwt-simple": "0.2.0",
     "lru-cache": "4.0.0",
+    "mkc": "^1.3.0",
     "node-uuid": "1.4.7",
     "password-hash-and-salt": "0.1.3",
     "pem": "1.8.3",
