--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "happn",
   "description": "pub/sub api as a service using primus and mongo & redis or nedb, can work as cluster, single process or embedded using nedb, use in production at your own risk",
-  "version": "2.13.0-DEV",
+  "version": "2.13.2-DEV",
   "main": "./lib/index",
   "scripts": {
     "test": "mocha --expose-gc silence.js test",
@@ -33,6 +33,7 @@
     "happn-logger": "0.0.2",
     "happn-nedb": "1.8.1",
     "happn-util-crypto": "0.2.0",
+    "jsonpack": "^1.1.5",
     "jwt-simple": "0.2.0",
     "lru-cache": "4.0.0",
     "node-uuid": "1.4.7",
