--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "happn-logger": "0.0.2",
     "happn-nedb": "1.8.1",
     "happn-util-crypto": "0.2.0",
-    "jsonpack": "^1.1.5",
+    "jsonpack": "1.1.5",
     "jwt-simple": "0.2.0",
-    "long-timeout": "^0.1.1",
+    "long-timeout": "0.1.1",
     "lru-cache": "4.0.0",
+    "ms": "0.7.1",
     "node-uuid": "1.4.7",
     "password-hash-and-salt": "0.1.3",
     "pem": "1.8.3",
