--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "pub/sub api as a service using primus and mongo & redis or nedb, can work as cluster, single process or embedded using nedb, use in production at your own risk",
   "version": "2.15.4",
   "main": "./lib/index",
-  "protocol":"1.1.0",
+  "protocol": "1.1.0",
   "scripts": {
     "test": "mocha --expose-gc silence.js test",
     "test-cover": "istanbul cover _mocha -- silence.js test",
@@ -47,6 +47,7 @@
     "shortid": "2.2.4",
     "sift": "3.2.6",
     "sillyname": "0.1.0",
+    "tcp-port-used": "^0.1.2",
     "traverse": "0.6.6",
     "underscore.string": "3.3.4",
     "user-home": "2.0.0",
