--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "pub/sub api as a service using primus and mongo & redis or nedb, can work as cluster, single process or embedded using nedb, use in production at your own risk",
   "version": "2.16.2",
   "main": "./lib/index",
-  "protocol":"1.1.0",
+  "protocol": "1.1.0",
   "scripts": {
     "test": "mocha --expose-gc silence.js test",
     "test-cover": "istanbul cover _mocha -- silence.js test",
@@ -39,7 +39,6 @@
     "long-timeout": "0.1.1",
     "lru-cache": "4.0.0",
     "ms": "0.7.1",
-    "node-uuid": "1.4.7",
     "password-hash-and-salt": "0.1.3",
     "pem": "1.8.3",
     "primus": "4.0.5",
@@ -50,6 +49,7 @@
     "traverse": "0.6.6",
     "underscore.string": "3.3.4",
     "user-home": "2.0.0",
+    "uuid": "^3.0.0",
     "ws": "1.0.1"
   },
   "devDependencies": {
