--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "happn",
   "description": "pub/sub api as a service using primus and mongo & redis or nedb, can work as cluster, single process or embedded using nedb, use in production at your own risk",
-  "version": "2.18.0",
+  "version": "2.18.1",
   "main": "./lib/index",
   "protocol": "1.1.0",
   "scripts": {
@@ -40,7 +40,7 @@
     "long-timeout": "0.1.1",
     "lru-cache": "4.0.0",
     "ms": "0.7.1",
-    "node-uuid": "1.4.7",
+    "uuid": "3.0.1",
     "password-hash-and-salt": "0.1.3",
     "pem": "1.8.3",
     "primus": "4.0.5",
