update to happn-primus

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "deep-copy": "1.1.2",
     "happn-logger": "0.0.2",
     "happn-nedb": "1.8.1",
+    "happn-primus": "^6.0.0",
     "happn-sillyname": "0.1.0",
     "happn-util-crypto": "0.2.3",
     "jsonpack": "1.1.5",
@@ -41,16 +42,15 @@
     "long-timeout": "0.1.1",
     "lru-cache": "4.0.0",
     "ms": "0.7.1",
-    "uuid": "3.0.1",
     "password-hash-and-salt": "0.1.3",
     "pem": "1.8.3",
-    "primus": "4.0.5",
     "serve-static": "1.10.0",
     "shortid": "2.2.4",
     "sift": "3.2.6",
     "traverse": "0.6.6",
     "underscore.string": "3.3.4",
     "user-home": "2.0.0",
+    "uuid": "3.0.1",
     "ws": "1.0.1"
   },
   "devDependencies": {
