--- a/package.json
+++ b/package.json
@@ -24,41 +24,41 @@
     "url": "https://github.com/happner/happn.git"
   },
   "dependencies": {
-    "JSONStream": "0.10.0",
-    "async": "1.5.2",
-    "bluebird": "2.10.2",
-    "body-parser": "1.14.1",
-    "byline": "4.2.1",
-    "connect": "3.4.0",
-    "connect-cookies": "0.0.0",
-    "deep-copy": "1.1.2",
-    "happn-logger": "0.0.2",
-    "happn-nedb": "1.8.1",
-    "happn-primus": "^6.0.0",
-    "happn-sillyname": "0.1.0",
-    "happn-util-crypto": "0.2.3",
-    "jsonpack": "1.1.5",
-    "jwt-simple": "0.2.0",
-    "long-timeout": "0.1.1",
-    "lru-cache": "4.0.0",
-    "ms": "0.7.1",
-    "password-hash-and-salt": "0.1.3",
-    "pem": "1.8.3",
-    "serve-static": "1.10.0",
-    "shortid": "2.2.4",
-    "sift": "3.2.6",
-    "traverse": "0.6.6",
-    "underscore.string": "3.3.4",
-    "user-home": "2.0.0",
-    "uuid": "3.0.1",
-    "ws": "1.0.1"
+    "JSONStream": "^0.10.0",
+    "async": "^1.5.2",
+    "bluebird": "^2.10.2",
+    "body-parser": "^1.14.1",
+    "byline": "^4.2.1",
+    "connect": "^3.4.0",
+    "connect-cookies": "^0.0.0",
+    "deep-copy": "^1.1.2",
+    "happn-logger": "^0.0.2",
+    "happn-nedb": "^1.8.1",
+    "happn-primus": "^6.0.1",
+    "happn-sillyname": "^0.1.0",
+    "happn-util-crypto": "^0.2.3",
+    "jsonpack": "^1.1.5",
+    "jwt-simple": "^0.2.0",
+    "long-timeout": "^0.1.1",
+    "lru-cache": "^4.0.0",
+    "ms": "^0.7.1",
+    "password-hash-and-salt": "^0.1.3",
+    "pem": "^1.8.3",
+    "serve-static": "^1.10.0",
+    "shortid": "^2.2.4",
+    "sift": "^3.2.6",
+    "traverse": "^0.6.6",
+    "underscore.string": "^3.3.4",
+    "user-home": "^2.0.0",
+    "uuid": "^3.0.1",
+    "ws": "^1.0.1"
   },
   "devDependencies": {
-    "benchmarket": "0.0.11",
+    "benchmarket": "^0.2.0",
     "chai": "^3.5.0",
     "coveralls": "^2.11.6",
     "debug": "^2.2.0",
-    "expect.js": "*",
+    "expect.js": "^0.3.1",
     "gulp": "^3.9.1",
     "happn-random-activity-generator": "^0.2.0",
     "istanbul": "^0.4.1",
@@ -67,8 +67,7 @@
     "karma-chrome-launcher": "^0.2.1",
     "karma-mocha": "^0.2.1",
     "karma-mocha-reporter": "^1.1.3",
-    "mocha": "*",
-    "objective": "0.0.40",
+    "mocha": "^3.4.2",
     "request": "^2.67.0"
   },
   "readmeFilename": "README.md"
