--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: node_js
 
 before_install:
-  - if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
+- if [[ `node -v` == v0* ]]; then npm i -g npm@3; fi
+- if [[ `node -v` != v0* && `npm -v` != 5* ]]; then npm i -g npm@5; fi
 
 node_js:
+  - "8"
   - "6"
-  - "4"
   - "0.10"
 env:
 - NODE_TLS_REJECT_UNAUTHORIZED=0
