increase broken test timeout and travis only on master

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: node_js
 
+branches:
+  only:
+    - master
+
 before_install:
 - if [[ `node -v` == v0* ]]; then npm i -g npm@3; fi
 - if [[ `node -v` != v0* && `npm -v` != 5* ]]; then npm i -g npm@5; fi
