--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "lru-cache": "^4.0.0",
     "ms": "^0.7.1",
     "happn-password-hash-and-salt": "1.1.0",
-    "pem": "^1.8.3",
+    "pem": "~1.11.0",
     "serve-static": "^1.10.0",
     "shortid": "^2.2.4",
     "sift": "^3.2.6",
